--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.list{
+  width:90%;
+  margin: auto;
+  max-width: 1200px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;
+  gap: 150px;
+  row-gap: 50px;
+}
+
+
+.header {
+  height: 100px;
+  width: 90%;
+  margin: auto;
+  max-width: 1200px;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+
+  align-items: center;
+
+}
+.logo > img{
+  width: 50px;
+  object-fit: contain;
+}
+
+.instructions{
+  margin-top: 50px;
+  height:150px;
+  display: flex;
+  justify-content: center;
+  width: 600px;
+  margin: auto;
+  font-size: 30px;
+  font-weight: 600;
   color: white;
+  text-align: center;
+  line-height: 50px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sc-kTvvXX {
+  background-color: #202c37 !important;
+  width: 40vw !important;
+  height: 450px;
 }
